[package]
name = "dd_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3"
motor_lib = { git = "https://github.com/nityc-d-robo/motor_lib.git", branch = "feature/robomaster-protocol" }